# cargo-features = ["strip"]

[package]
authors = ["Robert Cunningham <robertvcunningham@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "controller-2007"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
panic-semihosting = "0.5.6"

[dependencies.ezing]
path = "../libraries/ezing"

# ezing = "0.2.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f302", "rt"]
# version = "0.13.0"

[dependencies.stm32f3xx-hal]
features = ["stm32f302x6", "rt"]
version = "0.6.1"
# git = "https://github.com/stm32-rs/stm32f3xx-hal"

[dependencies.drogue-mpu-6050]
path = "../libraries/drogue-mpu-6050"

# this lets you use `cargo fix`!
[[bin]]
name = "controller-2007"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
# strip = "symbols"
